--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,14 +12,14 @@
   
 <!--  filter 등록 -->
 <!-- 로그인확인 필터 -->
-<!--   <filter> -->
-<!--   	<filter-name>loginCheckFilter</filter-name> -->
-<!--   	<filter-class>kr.or.ddit.filter.LoginCheckFilter</filter-class> -->
-<!--   </filter> -->
-<!--   <filter-mapping> -->
-<!--   	<filter-name>loginCheckFilter</filter-name> -->
-<!--   	<url-pattern>/*</url-pattern> -->
-<!--   </filter-mapping> -->
+  <filter>
+  	<filter-name>loginCheckFilter</filter-name>
+  	<filter-class>kr.or.ddit.filter.LoginCheckFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>loginCheckFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   
   
   
